# e7-switcher

./: .gitignore  CMakeLists.txt  README.md  build.sh  library.json  platformio.ini  pyproject.toml
.github/workflows/: build-wheels.yml
cmake/: e7-switcher-config.cmake.in
examples/desktop_example/src/: main.cpp
examples/esp32_example/: platformio.ini
examples/esp32_example/src/: main.cpp
include/: client.h  communication.h  compression.h  constants.h  data_structures.h  e7_switcher_client.h  hebcal_assur.h  hebcal_is_rest_day.h  json_helpers.h  logger.h  message_stream.h  oge_ir_device_code.h  packets.h  parser.h  stream_message.h
include/e7-switcher/: hebcal_is_rest_day.h  secrets_template.h
python/: CMakeLists.txt  README.md  setup.py
python/e7_switcher/: client.py  version.py
src/: base64_decode.cpp  client.cpp  communication.cpp  compression.cpp  crc.cpp  crypto.cpp  data_structures.cpp  e7_switcher_client.cpp  hebcal_assur.cpp  hebcal_is_rest_day.cpp  json_helpers.cpp  logger.cpp  main.cpp  main_desktop.cpp  main_esp32.cpp  message_stream.cpp  messages.cpp  oge_ir_device_code.cpp  packets.cpp  parser.cpp  stream_message.cpp  time_utils.cpp
